--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -1,50 +1,49 @@
 name: CI/CD Pipeline
+
 on:
-push:
-branches:
-- main
-pull_request:
-branches:
-- main
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+
 jobs:
-test-and-deploy:
-runs-on: ubuntu-latest
-steps:
-- name: Checkout code
-uses: actions/checkout@v3
-- name: Set up Python
-uses: actions/setup-python@v4
-with:
-python-version: '3.9'
-- name: Install dependencies
-run: |
-python -m pip install --upgrade pip
-pip install pytest flake8
-- name: Run linter
-run: flake8 app.py
-- name: Run tests
-run: pytest test_app.py
-- name: Build artifact
-run: |
-chmod +x build.sh
-./build.sh
-- name: Create Release
-if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-uses: actions/create-release@v1
-env:
-GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-with:
-tag_name: v${{ github.run_number }}
-release_name: Release v${{ github.run_number }}
-draft: false
-prerelease: false
-- name: Upload Release Asset
-if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-uses: actions/upload-release-asset@v1
-env:
-GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-with:
-upload_url: ${{ steps.create-release.outputs.upload_url }}
-asset_path: ./projeto.zip
-asset_name: projeto.zip
-asset_content_type: application/zip
+  test-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest flake8
+
+      - name: Run linter
+        run: flake8 app.py
+
+      - name: Run tests
+        run: pytest test_app.py
+
+      - name: Build artifact
+        run: |
+          chmod +x build.sh
+          ./build.sh
+
+      - name: Create GitHub Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ github.run_number }}
+          name: Release v${{ github.run_number }}
+          draft: false
+          prerelease: false
+          files: ./projeto.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
