--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -39,7 +39,7 @@ jobs:
           zip -r projeto.zip .
 
       - name: Create GitHub Release
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ github.run_number }}
